# ONLYOFFICEcore

wasm-converter/: .gitignore  Cargo.toml  README.md  build.bat  build.sh
wasm-converter/fonts/: download_fonts.sh
wasm-converter/src/: converter.rs  font_manager.rs  image_renderer.rs  lib.rs  pdf_writer.rs
wasm-converter/src/formats/: chart.rs  common_stubs.rs  csv_conv.rs  docx.rs  docx_layout.rs  epub.rs  mod.rs  odp.rs  odt.rs  pptx.rs  pptx_layout.rs  rtf.rs  smartart.rs  txt.rs  xlsx.rs
wasm-converter/tests/: integration_test.rs
wasm-converter/www/: index.html  main.js  sample_font_main.js  styles.css
wasm-converter/www/pkg/: README.md  package.json  wasm_document_converter.d.ts  wasm_document_converter.js  wasm_document_converter_bg.wasm  wasm_document_converter_bg.wasm.d.ts
