[package]
name = "wasm-document-converter"
version = "0.1.2"
edition = "2021"
authors = ["ONLYOFFICE Contributors"]
description = "WebAssembly document converter - converts DOC, DOCX, ODT, RTF, TXT, EPUB, XPS, DjVu, XLS, XLSX, ODS, CSV, PPT, PPTX, ODP to PDF or page images (ZIP)"
license = "AGPL-3.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
embed-fonts = []
diagnostics = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
calamine = { version = "0.26", default-features = false }
encoding_rs = "0.8"
miniz_oxide = "0.8"
png = "0.17"
jpeg-decoder = "0.3"
csv = "1"
ab_glyph = "0.2"
unicode-linebreak = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
